# poetry-commit-date-versioning

./: README.md  pyproject.toml
dateversioning/: __init__.py
tests/: set_version_test.py
